@@ -1,5 +1,8 @@
 2007-05-20  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rb_cairo_surface.c (cr_win32_surface_initialize): fixed a
+	typo. Thanks to Yoshinao Muramatsu!
+
 	* src/rb_cairo_font_face.c, src/lib/cairo/constants.rb: followed
 	up the previous commit.
 
